# chuk-mlx

./: .env  .gitignore  MANIFEST.in  Makefile  README.md  TEST_COVERAGE_SUMMARY.md  add_3x4_all_layers.json  analyze_times_table.py  attention_head_analysis.py  batch_analyzer.py  batch_generator.py  batch_generator_finetune.py  batch_generator_pretrain.py  batch_generator_random.py  batch_loader_test.py  batch_memory_calculator.py  batch_pretrain_target_shift_generator.py  batch_token_calculator.py  batch_viewer.py  batch_viewer_cli.py  circuit-experiment.md  custom_tokenizer_cli.py  custom_tokenizer_diagnostic.py  dataset.py  evaluation_results.json  external_memory_injection.py  finetune.py  fix_tests.py  generate_random_npy_batches.py  hello.py  infer.py  interference_analysis.json  interference_matrix.py  jsonl_tokenizer_view.py  lazyfox.py  memory-structure.md  memory_capitals_test.json  memory_mult_test.json  mock_finetune_train.py  mock_pretrain_train.py  (+21 more)
batch_generation/: batch_analysis_summary.py  batch_base.py  bucketing.py  finetune_batch.py  llama_finetune_batch.py  pretrain_batch.py  sequence_utility.py
batches/: batch_base.py  batch_dataset_base.py  batch_utils.py  bucketing.py  directory_batch_dataset.py  finetune_batch.py  generate_batch.py  llama_finetune_batch.py  memory_utility.py  pretrain_batch.py  pretrain_target_batch_generator.py  sequence_utility.py  summary_utility.py
chuk_loss_function/: chuk_loss_function.py  mock_loss_function.py
chuk_models/: mock_model.py  simple_language_model.py
chuk_optimizers/: mock_optimizer.py
chuk_tokenizers/: custom_tokenizer.py  lazyfox_tokenizer.py  vocab_utils.py
converted_tiered_lightweight/: conversion_metadata.json
dataset/: batch_dataset_base.py  finetune_batch_dataset.py  mock_pretrain_batch_dataset.py  pretrain_batch_dataset.py  train_batch_dataset.py
docs/: 00-Supported-Models.md  01-Inference.md  01-Model-Downloader.md  02-Inference.md  02-Tokenizer.md  02-lazyfox.md  02-pretrain_tiny_shakespeare.md  02a-Print-Tokens-Utility.md  02a-Tokenizer-HuggingFace.md  02b-Custom-Tokenizer-CLI.md  02b-Tokenizer-Custom.md  02c-Custom-Tokenizer-Diagnostics.md  02s-Inference.md  03-Diagnostic-Tools.md  03-batch_generation_pretrain.md  03a-Batch_Diagnostic_Tests.md  03a-Batch_Diagnostic_Tools.md  03b-Batch_Calculators.md  04-Pretrain-Batch-Generation.md  04-batch_generation_finetune.md  04-lazyfox.md  04a-Pretrain-Batch-Generation.md  04b-Finetune-Batch-Generation.md  05-Batch-Diagnosis-Tools.md  05s-Inference.md  06-lazyfox.md  07-Diagnostic-Tools.md  07-Finetune-Batch-Generation.md  08-finetune.md  09-finetune-lora.md  09-pylorarun.rtf  Batch-Diagnosis-Tools.md  Batch-Generation.md  Diagnostic-Tools.md  Inference.md  REFACTORING_PLAN.md  STATUS_AND_ROADMAP.md  api-reference.md  batching.md  cli.md  (+16 more)
examples/: README.md
experiments/: __init__.py  expert_combined_analysis.py  expert_pattern_summary.py  expert_relationship_markers.py  expert_semantic_patterns.py  expert_sequence_patterns.py  semantic_trigram_taxonomy.py
gemma_discovery_cache/: CLI_EXPERIMENTS.md  EARLY_LAYER_ANALYSIS.md  GEMMA_CIRCUIT_EXPERIMENTS.md  MOE_EXPERT_ANALYSIS.md  THEORY_EXPERIMENTS.md  activation_steering.json  attention_ablation.json  causal_neurons.json  circuit_via_probes.json  discovery_summary.json  embedding_analysis.json  layer_ablation.json  layer_roles.json  layer_specialization.md  lookup_evolution.json  lookup_table_analysis.json  multiplication_circuit.json  neuron_ablation.json  orthogonal_extraction.json  phase_boundaries.json  phase_proofs.json  projection_method.md  universal_multiplication_circuit.md
gpt-oss-lite-v2/: README.md  benchmark_results.json  benchmark_simple.py  build_minimal_lite.py  config.json  lite_loader_optimized.py  lite_loader_optimized_virtual.py
models/: inference_utility.py  load_weights.py  loss_function.py  mlx_model_weights_loader.py  model.py  model_config.py  model_loader.py
parameter_server/: README.md  client.py  llm_receiver_client.py  llm_send_client.py  test.py  (+1 more)
(+2117 files in other folders)
