[project]
name = "chuk-mlx"
version = "0.1.0"
description = "MLX-based LLM training and inference with hybrid RL architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.12.0",
    "mlx-lm>=0.12.0",
    "transformers>=4.40.1",
    "huggingface-hub>=0.23.0,<0.24.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "training", "tools", "rl"]
